[package]
name = "glhf"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
anyhow = "1.0.86"
bitflags = "2.6.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
glutin = "0.32.0"
glutin-winit = "0.5.0"
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
winit = "0.30.4"

[build-dependencies]
gl_generator = "0.14.0"
